--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
     <link rel="stylesheet" href="style.css" />
     <script type="module" src="index.js"></script>
   </head>
-  <body></body>
+  <body>
+    <div class="window"></div>
+  </body>
 </html>
